fix: styles + model visibility

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,8 +1,3 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-
-body {
-  background: #0d0d0d
-}
